--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,7 @@
       <mat-nav-list appaccordion class="mat-nav-list mat-list-base" role="navigation">
 
         <a mat-list-item [routerLink]="'/dashboard1'"> dashboard1 </a>
+        <a mat-list-item [routerLink]="'/form-layout'"> form-layout </a>
         <a mat-list-item [routerLink]="'/accounts'"> Accounts </a>
         <a mat-list-item [routerLink]="'/create-account'"> Create Account </a>
         <a mat-list-item [routerLink]="'/contacts'"> Contacts </a>
