update jwt auth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,6 +77,7 @@
         <a mat-list-item [routerLink]="'/contactform'"> contactform </a>
         <a mat-list-item [routerLink]="'/login'"> login </a>
         <a mat-list-item [routerLink]="'/register'"> register </a>
+        <a mat-list-item [routerLink]="'/products'"> products </a>
         <a mat-list-item (click)="snav.toggle()" href="" mat-list-item>Close</a>
 
       </mat-nav-list>
