--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -3,9 +3,7 @@
        *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
-  <div class="button-row">
-    <a mat-flat-button color="primary" (click)="logout()">Logout</a>
-  </div>
+
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="data" class="example-table">
 
@@ -25,6 +23,21 @@
       <ng-container matColumnDef="prodPrice">
         <th mat-header-cell *matHeaderCellDef>Product Price</th>
         <td mat-cell *matCellDef="let row">{{row.prodPrice}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="icon-update">
+        <th mat-header-cell *matHeaderCellDef>Update</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-icon aria-hidden="false" [routerLink]="['/edit-product/', row.id]">edit</mat-icon>
+        </td>
+      </ng-container>
+
+      <!-- Title Column -->
+      <ng-container matColumnDef="icon-delete">
+        <th mat-header-cell *matHeaderCellDef>Delete</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-icon aria-hidden="false" (click)="deleteProduct(row.id)">delete</mat-icon>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
